Bug 501420 - Locking quick search phrase does not work
Summary: Locking quick search phrase does not work
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: search (other bugs)
Version First Reported In: 6.3.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-12 18:05 UTC by Johannes Studt
Modified: 2025-03-13 06:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Studt 2025-03-12 18:05:17 UTC
SUMMARY
Additionally to the problems described in https://bugs.kde.org/show_bug.cgi?id=497648 the locking of quick search does not work. When locking the search phrase and switching to another folder, nothing is found. Deleting the search phrase and re-enter it from scratch leads to results as expected.

STEPS TO REPRODUCE
1. Enter quick search phrase
2. click the lock icon
3. switch to another folder containing entries matching the search criteria

OBSERVED RESULT
Nothing is found

EXPECTED RESULT
Entries matching the criteria are displayed

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20250301
KDE Plasma Version: 6.3.2
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2025-03-13 06:50:02 UTC
Git commit 5ed38f609e317bc0ac9a34ff232f601557055439 by Laurent Montel.
Committed on 13/03/2025 at 06:49.
Pushed by mlaurent into branch 'release/25.04'.

Fix BUG 501420:  Locking quick search phrase does not work(
FIXED-IN: 6.4.0

M  +2    -0    messagelist/src/core/widgetbase.cpp

https://invent.kde.org/pim/messagelib/-/commit/5ed38f609e317bc0ac9a34ff232f601557055439