Fix BUG 501420:  Locking quick search phrase does not work(

BUG: 501420
FIXED-IN: 6.4.0