messagelist/src/core/widgetbase.cpp
@@ -380,6 +380,8 @@ void Widget::setStorageModel(StorageModel *storageModel, PreSelectionMode preSel
         if (d->mFilter) {
             resetFilter();
         }
+    } else {
+        searchTimerFired();
     }
     StorageModel *oldModel = d->mStorageModel;
 
